fixes #3 validate graphql path against configured path in graphql.yml

--- a/graphql-validator/pom.xml
+++ b/graphql-validator/pom.xml
@@ -32,6 +32,10 @@
     <dependencies>
         <dependency>
             <groupId>com.networknt</groupId>
+            <artifactId>graphql-router</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
             <artifactId>config</artifactId>
         </dependency>
         <dependency>
