add two more modules in the project

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,16 @@
                 <artifactId>graphql-security</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.networknt</groupId>
+                <artifactId>graphql-router</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.networknt</groupId>
+                <artifactId>graphql-validator</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.networknt</groupId>
