--- a/docs/config.toml
+++ b/docs/config.toml
@@ -56,29 +56,34 @@ googleAnalytics = ""
 	weight = 20
 
 [[menu.main]]
+	name   = "Components"
+	url    = "components/"
+	weight = 30
+
+[[menu.main]]
 	name   = "Tutorials"
 	url    = "tutorials/"
-	weight = 30
+	weight = 40
 
 [[menu.main]]
 	name   = "Tools"
 	url    = "tools/"
-	weight = 40
+	weight = 50
 
 [[menu.main]]
 	name   = "Issues & Help"
 	url    = "https://github.com/networknt/light-java-graphql/issues"
-	weight = 50
+	weight = 60
 
 [[menu.main]]
 	name   = "Roadmap"
 	url    = "roadmap/"
-	weight = 60
+	weight = 70
 
 [[menu.main]]
 	name   = "License"
 	url    = "https://www.apache.org/licenses/LICENSE-2.0"
-	weight = 70
+	weight = 80
 
 
 [blackfriday]
