--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,6 +1,6 @@
-baseurl = "https://networknt.github.io/light-java-graphql/"
+baseurl = "https://networknt.github.io/light-graphql-4j/"
 languageCode = "en-us"
-title = "Light Java GraphQL - A GraphQL framework built on top of Light-Java"
+title = "Light GraphQL 4J - A GraphQL framework built on top of light-4j"
 theme = "hugo-material-docs"
 metadataformat = "yaml"
 canonifyurls = true
@@ -10,14 +10,14 @@ googleAnalytics = ""
 [params]
 	# General information
 	author = "Steve Hu"
-	description = "Light Java GraphQL Docs"
+	description = "Light GraphQL 4J Docs"
 	copyright = "Released under the MIT license"
 
 	# Repository
 	provider = "GitHub"
-	repo_url = "https://github.com/networknt/light-java-graphql"
+	repo_url = "https://github.com/networknt/light-graphql-4j"
 
-	version = "1.2.6"
+	version = "1.3.0"
 	logo = "images/logo.png"
 	favicon = ""
 
@@ -72,7 +72,7 @@ googleAnalytics = ""
 
 [[menu.main]]
 	name   = "Issues & Help"
-	url    = "https://github.com/networknt/light-java-graphql/issues"
+	url    = "https://github.com/networknt/light-graphql-4j/issues"
 	weight = 60
 
 [[menu.main]]
