--- a/graphql-common/pom.xml
+++ b/graphql-common/pom.xml
@@ -20,8 +20,8 @@
 
     <parent>
         <groupId>com.networknt</groupId>
-        <artifactId>light-java-graphql</artifactId>
-        <version>1.2.8</version>
+        <artifactId>light-graphql-4j</artifactId>
+        <version>1.3.0</version>
         <relativePath>..</relativePath>
     </parent>
 
