--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.networknt</groupId>
-    <artifactId>light-java-graphql</artifactId>
-    <version>1.2.8</version>
+    <artifactId>light-graphql-4j</artifactId>
+    <version>1.3.0</version>
     <packaging>pom</packaging>
     <name>Parent POM</name>
-    <description>Light Java Framework GraphQL Components</description>
-    <url>https://github.com/networknt/light-java-graphql</url>
+    <description>Light 4J Framework GraphQL Components</description>
+    <url>https://github.com/networknt/light-graphql-4j</url>
 
     <developers>
         <developer>
@@ -35,7 +35,7 @@
 
     <issueManagement>
         <system>github</system>
-        <url>https://github.com/networknt/light-java-graphql/issues</url>
+        <url>https://github.com/networknt/light-graphql-4j/issues</url>
     </issueManagement>
 
     <licenses>
@@ -47,9 +47,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git://github.com:networknt/light-java-graphql.git</connection>
-        <developerConnection>scm:git://github.com:networknt/light-java-graphql.git</developerConnection>
-        <url>https://github.com:networknt/light-java-graphql.git</url>
+        <connection>scm:git://github.com:networknt/light-graphql-4j.git</connection>
+        <developerConnection>scm:git://github.com:networknt/light-graphql-4j.git</developerConnection>
+        <url>https://github.com:networknt/light-graphql-4j.git</url>
     </scm>
 
     <distributionManagement>
@@ -66,7 +66,7 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.light-java>1.2.8</version.light-java>
+        <version.light-4j>1.3.0</version.light-4j>
         <version.jackson>2.8.7</version.jackson>
         <version.slf4j>1.7.25</version.slf4j>
         <version.jose4j>0.5.5</version.jose4j>
@@ -128,127 +128,127 @@
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>config</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>utility</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>security</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>client</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>audit</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>dump</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>info</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>health</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>status</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>exception</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>body</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>mask</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>handler</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>metrics</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>sanitizer</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>traceability</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>correlation</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>service</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>switcher</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>registry</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>balance</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>consul</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>zookeeper</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>cors</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>server</artifactId>
-                <version>${version.light-java}</version>
+                <version>${version.light-4j}</version>
             </dependency>
             <!-- External dependencies -->
 
