--- a/graphql-router/pom.xml
+++ b/graphql-router/pom.xml
@@ -51,6 +51,10 @@
             <artifactId>info</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>service</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
         </dependency>
