feat(subscription): Add routing support for graphql subscriptions

--- a/graphql-common/src/main/resources/config/graphql.yml
+++ b/graphql-common/src/main/resources/config/graphql.yml
@@ -5,3 +5,6 @@ path: /graphql
 
 # Enable GraphiQL for development environment only. It will allow you to test from your Browser.
 enableGraphiQL: true
+
+# Path to the websocket endpoint to handle subscription requests.
+subscriptionsPath: /subscriptions
