--- a/graphql-validator/pom.xml
+++ b/graphql-validator/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>status</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>utility</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
         </dependency>
