Adding support for client provided resource paths.

--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,11 @@
                 <artifactId>server</artifactId>
                 <version>${version.light-4j}</version>
             </dependency>
+            <dependency>
+                <groupId>com.networknt</groupId>
+                <artifactId>resources</artifactId>
+                <version>${version.light-4j}</version>
+            </dependency>
             <!-- External dependencies -->
 
             <dependency>
