--- a/graphql-common/pom.xml
+++ b/graphql-common/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>graphql-java</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>resources</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
         </dependency>
