--- a/graphql-router/pom.xml
+++ b/graphql-router/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>status</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>resources</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
         </dependency>
