fixes #40 Log error message on the server if validation error occurs

--- a/graphql-validator/src/main/resources/config/validator.yml
+++ b/graphql-validator/src/main/resources/config/validator.yml
@@ -1,3 +1,6 @@
 # Validate request/response for GraphQL request
 ---
+# Enable request validation against the specification
 enabled: true
+# Log error message if validation error occurs
+logError: true
