--- a/graphql-validator/src/main/resources/config/validator.yml
+++ b/graphql-validator/src/main/resources/config/validator.yml
@@ -1,4 +1,5 @@
-# Validate request/response for GraphQL request
+# A generic light-4j framework validator configuration. If multiple frameworks are used in the
+# same server instance and they have different configurations. You can use graphql-validator.yml
 ---
 # Enable request validation against the specification
 enabled: true
