--- a/graphql-security/src/test/resources/config/graphql-security.yml
+++ b/graphql-security/src/test/resources/config/graphql-security.yml
@@ -1,7 +1,7 @@
 # Security configuration for graphql-security in light-graphql-4j. It is a specific config
-# for GraphQL framework and it can be used if you have other frameworks running in the
-# same server instance and their security configurations are different then the GraphQL.
-# If this file cannot be found, the generic security.yml will be loaded as a fallback.
+# for GraphQL framework security. It is introduced to support multiple frameworks in the
+# same server instance. If this file cannot be found, the generic security.yml will be
+# loaded for backward compatibility.
 ---
 # Enable JWT verification flag.
 enableVerifyJwt: true
