--- a/graphql-security/pom.xml
+++ b/graphql-security/pom.xml
@@ -36,6 +36,10 @@
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
+            <artifactId>http-string</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
             <artifactId>security</artifactId>
         </dependency>
         <dependency>
