--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.networknt</groupId>
     <artifactId>light-graphql-4j</artifactId>
-    <version>2.0.8-SNAPSHOT</version>
+    <version>2.0.8</version>
     <packaging>pom</packaging>
     <name>Parent POM</name>
     <description>Light 4J Framework GraphQL Components</description>
@@ -92,7 +92,7 @@
     <properties>
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.light-4j>2.0.8-SNAPSHOT</version.light-4j>
+        <version.light-4j>2.0.8</version.light-4j>
         <version.jackson>2.10.0</version.jackson>
         <version.jackson-databind>2.10.0</version.jackson-databind>
         <version.slf4j>1.7.25</version.slf4j>
