fixes #85 externalize the graphql-validator.yml in the default folder

--- a/graphql-validator/src/main/resources/config/graphql-validator.yml
+++ b/graphql-validator/src/main/resources/config/graphql-validator.yml
@@ -4,6 +4,6 @@
 # next major release.
 ---
 # Enable request validation against the specification
-enabled: true
+enabled: ${graphql-validator:true}
 # Log error message if validation error occurs
-logError: true
+logError: ${graphql-validator:true}
