--- a/graphql-router/pom.xml
+++ b/graphql-router/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.networknt</groupId>
         <artifactId>light-graphql-4j</artifactId>
-        <version>2.1.34</version>
+        <version>2.1.35-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
