--- a/graphql-common/pom.xml
+++ b/graphql-common/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.networknt</groupId>
         <artifactId>light-graphql-4j</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.2-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
