add name to the pom.xml for each module

--- a/graphql-router/pom.xml
+++ b/graphql-router/pom.xml
@@ -22,11 +22,12 @@
         <groupId>com.networknt</groupId>
         <artifactId>light-graphql-4j</artifactId>
         <version>2.2.2</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>graphql-router</artifactId>
     <packaging>jar</packaging>
+    <name>graphql-router</name>
     <description>A route handler for GraphQL endpoint</description>
 
     <dependencies>
