--- a/graphql-security/pom.xml
+++ b/graphql-security/pom.xml
@@ -22,11 +22,12 @@
         <groupId>com.networknt</groupId>
         <artifactId>light-graphql-4j</artifactId>
         <version>2.2.2</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>graphql-security</artifactId>
     <packaging>jar</packaging>
+    <name>graphql-security</name>
     <description>A security module that contains all handlers to protect your graphql endpoint</description>
 
     <dependencies>
