--- a/graphql-common/pom.xml
+++ b/graphql-common/pom.xml
@@ -22,11 +22,12 @@
         <groupId>com.networknt</groupId>
         <artifactId>light-graphql-4j</artifactId>
         <version>2.2.2</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>graphql-common</artifactId>
     <packaging>jar</packaging>
+    <name>graphql-common</name>
     <description>A shared utility module for GraphQL</description>
 
     <dependencies>
