--- a/graphql-validator/pom.xml
+++ b/graphql-validator/pom.xml
@@ -22,11 +22,12 @@
         <groupId>com.networknt</groupId>
         <artifactId>light-graphql-4j</artifactId>
         <version>2.2.2</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>graphql-validator</artifactId>
     <packaging>jar</packaging>
+    <name>graphql-validator</name>
     <description>A validator handler for GraphQL endpoints</description>
 
     <dependencies>
