--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.networknt</groupId>
     <artifactId>light-graphql-4j</artifactId>
-    <version>2.2.3-SNAPSHOT</version>
+    <version>2.3.0</version>
     <packaging>pom</packaging>
     <name>Parent POM</name>
     <description>Light 4J Framework GraphQL Components</description>
@@ -95,7 +95,7 @@
     <properties>
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.light-4j>2.2.3-SNAPSHOT</version.light-4j>
+        <version.light-4j>2.3.0</version.light-4j>
         <version.jackson>2.18.3</version.jackson>
         <version.slf4j>2.0.17</version.slf4j>
         <version.jose4j>0.9.6</version.jose4j>
