--- a/pom.xml
+++ b/pom.xml
@@ -512,6 +512,9 @@
 
     <profiles>
         <profile>
+            <id>schema-generation</id>
+        </profile>
+        <profile>
             <id>release-sign-artifacts</id>
             <activation>
                 <property>
