fixes #133 refactor config to central location to support reload

--- a/graphql-common/pom.xml
+++ b/graphql-common/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>service</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>server-config</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.graphql-java</groupId>
             <artifactId>graphql-java</artifactId>
         </dependency>
