--- a/graphql-router/pom.xml
+++ b/graphql-router/pom.xml
@@ -45,6 +45,11 @@
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
+            <artifactId>server-config</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
             <artifactId>handler</artifactId>
         </dependency>
         <dependency>
